[package]
name = "roaming-network-servers"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2021"

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'log/std',
    'safe-mix/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'roaming-networks/std',
    'roaming-operators/std',
    'serde',
]

[dependencies]
codec = { version = '3.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '2.0.0', default-features = false, features = ['derive'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }

serde = { version = '1.0.136', optional = true, features = ['derive'] }

roaming-networks = { default-features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default-features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
