[package]
name = "roaming-networks"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'log/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'serde',
    'safe-mix/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'roaming-operators/std'
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '2.0.0', default_features = false }
frame-system = { version = '2.0.0', default_features = false }
pallet-balances = { version = '2.0.0', default_features = false }
pallet-randomness-collective-flip = { version = '2.0.0', default_features = false }
pallet-transaction-payment = { version = '2.0.0', default_features = false }
sp-core = { version = '2.0.0', default_features = false }
sp-io = { version = '2.0.0', default_features = false }
sp-runtime = { version = '2.0.0', default_features = false }
sp-std = { version = '2.0.0', default_features = false }

log = { version = '0.4.8' }
serde = { version = '1.0', optional = true }

roaming-operators = { default_features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
