[package]
name = "roaming-networks"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'log/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'safe-mix/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'roaming-operators/std',
    'serde',
]

[dependencies]
codec = { version = '2.2.0', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }

serde = { version = '1.0.126', optional = true, features = ['derive'] }

roaming-operators = { default-features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = 'e232df15bd4ccb834ebc16eaaab494938eb080c2', default-features = false }
