[package]
name = "roaming-organizations"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'log/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'serde',
    'safe-mix/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'roaming-network-servers/std',
    'roaming-networks/std',
    'roaming-operators/std',
]

[dependencies]
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '27e1f89a587d76ca1ffd119e9763ede672064bc6', default-features = false }

log = { version = '0.4.8' }
serde = { version = '1.0.101', optional = true, features = ['derive'] }

roaming-network-servers = { default-features = false, package = 'roaming-network-servers', path = '../roaming-network-servers' }
roaming-networks = { default-features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default-features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
