[package]
name = "roaming-service-profiles"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'pallet-randomness-collective-flip/std',
    'pallet-balances/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'system/std',
    'pallet-transaction-payment/std',
    'log/std',
    'serde',
    'roaming-network-servers/std',
    'roaming-networks/std',
    'roaming-operators/std'
]

[dependencies]
codec = { version = '1.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '2.0.0-alpha.3', default_features = false, package = 'frame-support', rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
pallet-randomness-collective-flip = { default_features = false, package = 'pallet-randomness-collective-flip', rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = '2.0.0-alpha.3', default_features = false, optional = true, rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = '2.0.0-alpha.3', default_features = false, rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = '2.0.0-alpha.3', default_features = false, package = 'sp-runtime', rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = '2.0.0-alpha.3', default_features = false, package = 'sp-std', rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
system = { version = '2.0.0-alpha.3', default_features = false, package = 'frame-system', rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
pallet-transaction-payment = { version = '2.0.0-alpha.3', default_features = false, package = 'pallet-transaction-payment', rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }
pallet-balances = { version = '2.0.0-alpha.3', default_features = false, package = 'pallet-balances', rev = '65ad8e9632f1a627fc9fb386dc5b60a54741d7a0', git = 'https://github.com/paritytech/substrate.git' }

log = { version = '0.4.8' }
serde = { version = '1.0', optional = true }

roaming-network-servers = { default_features = false, package = 'roaming-network-servers', path = '../roaming-network-servers' }
roaming-networks = { default_features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default_features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
