[package]
name = "roaming-service-profiles"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'log/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'serde',
    'safe-mix/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'roaming-network-servers/std',
    'roaming-networks/std',
    'roaming-operators/std'
]

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '3.0.0', default_features = false }
frame-system = { version = '3.0.0', default_features = false }
pallet-balances = { version = '3.0.0', default_features = false }
pallet-randomness-collective-flip = { version = '3.0.0', default_features = false }
pallet-transaction-payment = { version = '3.0.0', default_features = false }
sp-core = { version = '3.0.0', default_features = false }
sp-io = { version = '3.0.0', default_features = false }
sp-runtime = { version = '3.0.0', default_features = false }
sp-std = { version = '3.0.0', default_features = false }

log = { version = '0.4.8' }
serde = { version = '1.0', optional = true }

roaming-network-servers = { default_features = false, package = 'roaming-network-servers', path = '../roaming-network-servers' }
roaming-networks = { default_features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default_features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
