[package]
name = "roaming-sessions"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'randomness-collective-flip/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'system/std',
    'transaction-payment/std',
    'log/std',
    'serde',
    'roaming-devices/std',
    'roaming-organizations/std',
    'roaming-network-servers/std',
    'roaming-networks/std',
    'roaming-operators/std',
]

[dependencies]
codec = { version = '1.0.0', default-features = false, features = ['derive'], package = 'parity-scale-codec' }
frame-support = { default_features = false, package = 'frame-support', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }
randomness-collective-flip = { default_features = false, package = 'pallet-randomness-collective-flip', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = '2.0.0', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { default_features = false, package = 'sp-runtime', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { default_features = false, package = 'sp-std', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }
system = { default_features = false, package = 'frame-system', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }
transaction-payment = { default_features = false, package = 'pallet-transaction-payment', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }

log = { version = '0.4.8' }
serde = { version = '1.0', optional = true }

roaming-devices = { default_features = false, package = 'roaming-devices', path = '../roaming-devices' }
roaming-organizations = { default_features = false, package = 'roaming-organizations', path = '../roaming-organizations' }
roaming-network-servers = { default_features = false, package = 'roaming-network-servers', path = '../roaming-network-servers' }
roaming-networks = { default_features = false, package = 'roaming-networks', path = '../roaming-networks' }
roaming-operators = { default_features = false, package = 'roaming-operators', path = '../roaming-operators' }

[dev-dependencies]
balances = { package = 'pallet-balances', rev = 'b27d50c4c7b7137f2de04c31092f63a58970d0cb', git = 'https://github.com/paritytech/substrate.git' }
