[package]
name = "treasury-dao"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'log/std',
    'safe-mix/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'roaming-operators/std',
]

[dependencies]
hex-literal = { version = '0.3.1', optional = false }
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '4.0.0-dev', default-features = false }
frame-system = { version = '4.0.0-dev', default-features = false }
pallet-balances = { version = '4.0.0-dev', default-features = false }
pallet-randomness-collective-flip = { version = '4.0.0-dev', default-features = false }
pallet-transaction-payment = { version = '4.0.0-dev', default-features = false }
pallet-treasury = { version = '4.0.0-dev', default-features = false }
sp-core = { version = '4.0.0-dev', default-features = false }
sp-io = { version = '4.0.0-dev', default-features = false }
sp-runtime = { version = '4.0.0-dev', default-features = false }
sp-std = { version = '4.0.0-dev', default-features = false }

roaming-operators = { default-features = false, package = 'roaming-operators', path = '../../roaming/roaming-operators' }

[dev-dependencies]
