[package]
name = "treasury-dao"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2021"

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'log/std',
    'safe-mix/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'roaming-operators/std',
]

[dependencies]
hex-literal = { version = '0.3.4', optional = false }
codec = { version = '2.3.1', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '50ab759f7a3194173ce8da0937ec2d888dee10e0', default-features = false }

roaming-operators = { default-features = false, package = 'roaming-operators', path = '../../roaming/roaming-operators' }

[dev-dependencies]
