[package]
name = "mining-claims-token"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'safe-mix/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'roaming-operators/std',
    'mining-config-token/std',
    'mining-eligibility-token/std',
    'mining-rates-token/std',
    'mining-sampling-token/std',
]

[dependencies]
codec = { version = '1.2.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '2.0.0', default_features = false }
frame-system = { version = '2.0.0', default_features = false }
pallet-balances = { version = '2.0.0', default_features = false }
pallet-randomness-collective-flip = { version = '2.0.0', default_features = false }
pallet-transaction-payment = { version = '2.0.0', default_features = false }
sp-core = { version = '2.0.0', default_features = false }
sp-io = { version = '2.0.0', default_features = false }
sp-runtime = { version = '2.0.0', default_features = false }
sp-std = { version = '2.0.0', default_features = false }

roaming-operators = { default_features = false, package = 'roaming-operators', path = '../../../roaming/roaming-operators' }
mining-config-token = { default_features = false, package = 'mining-config-token', path = '../../../mining/config/token' }
mining-eligibility-token = { default_features = false, package = 'mining-eligibility-token', path = '../../../mining/eligibility/token' }
mining-rates-token = { default_features = false, package = 'mining-rates-token', path = '../../../mining/rates/token' }
mining-sampling-token = { default_features = false, package = 'mining-sampling-token', path = '../../../mining/sampling/token' }

[dev-dependencies]
