[package]
name = "mining-claims-token"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'log/std',
    'safe-mix/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'roaming-operators/std',
    'mining-setting-token/std',
    'mining-eligibility-token/std',
    'mining-rates-token/std',
    'mining-sampling-token/std',
    'serde',
]

[dependencies]
codec = { version = '2.2.0', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '1d5abf01abafdb6c15bcd0172f5de09fd87c5fbf', default-features = false }

roaming-operators = { default-features = false, package = 'roaming-operators', path = '../../../roaming/roaming-operators' }
mining-setting-token = { default-features = false, package = 'mining-setting-token', path = '../../../mining/setting/token' }
mining-eligibility-token = { default-features = false, package = 'mining-eligibility-token', path = '../../../mining/eligibility/token' }
mining-rates-token = { default-features = false, package = 'mining-rates-token', path = '../../../mining/rates/token' }
mining-sampling-token = { default-features = false, package = 'mining-sampling-token', path = '../../../mining/sampling/token' }

serde = { version = '1.0.126', optional = true, features = ['derive'] }

[dev-dependencies]
