[package]
name = "mining-eligibility-hardware"
version = "0.1.0"
authors = ["Luke Schoen"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'safe-mix/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-transaction-payment/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'roaming-operators/std',
    'mining-rates-hardware/std',
    'mining-config-hardware/std',
    'mining-sampling-hardware/std',
]

[dependencies]
codec = { version = '1.3.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { version = '2.0.0', default_features = false }
frame-system = { version = '2.0.0', default_features = false }
pallet-balances = { version = '2.0.0', default_features = false }
pallet-randomness-collective-flip = { version = '2.0.0', default_features = false }
pallet-transaction-payment = { version = '2.0.0', default_features = false }
sp-core = { version = '2.0.0', default_features = false }
sp-io = { version = '2.0.0', default_features = false }
sp-runtime = { version = '2.0.0', default_features = false }
sp-std = { version = '2.0.0', default_features = false }

roaming-operators = { default_features = false, package = 'roaming-operators', path = '../../../roaming/roaming-operators' }
mining-config-hardware = { default_features = false, package = 'mining-config-hardware', path = '../../../mining/config/hardware' }
mining-rates-hardware = { default_features = false, package = 'mining-rates-hardware', path = '../../../mining/rates/hardware' }
mining-sampling-hardware = { default_features = false, package = 'mining-sampling-hardware', path = '../../../mining/sampling/hardware' }

[dev-dependencies]
